# sift

./: .gitignore  CHANGELOG.md  GIT_COMMIT_GUIDE.md  IMPLEMENTATION_REPORT.md  IMPLEMENTATION_SUMMARY.md  INJECTION_DETECTOR.md  QUICK_REFERENCE.md  README.md  VALIDATION_SUMMARY.txt  config.yaml  dogfood.sh  install.sh  project_documentation.md  pyproject.toml  release-please-config.json  verify_implementation.py
.github/workflows/: ci.yml  publish.yml
eval/: run_injection_eval.py  run_ioc_eval.py  run_ioc_type_eval.py
eval/corpus/: injection_corpus.csv  ioc_classification_corpus.csv  ioc_type_corpus.csv
man/: sift.1
sift/: __init__.py  banner.py  cache.py  config.py  doctor.py  filtering.py  main.py  metrics.py  models.py  tuning.py  version_check.py
sift/enrichers/: __init__.py  barb_bridge.py  local_heuristics.py  protocol.py  runner.py  vex_bridge.py
sift/normalizers/: __init__.py  csv_normalizer.py  generic.py  protocol.py  splunk.py
sift/output/: __init__.py  export.py  formatter.py  html.py  md.py  stix.py
sift/pipeline/: __init__.py  attck.py  chunker.py  clusterer.py  dedup.py  ioc_extractor.py  prioritizer.py  redaction.py
sift/summarizers/: __init__.py  _response.py  anthropic.py  injection_detector.py  mock.py  ollama.py  openai.py  prompt.py  protocol.py  template.py  validation.py
sift/ticketing/: __init__.py  dry_run.py  jira.py  mapper.py  protocol.py  thehive.py
sift_triage.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: __init__.py  conftest.py  test_attck_validation.py  test_cache.py  test_cache_ticketing.py  test_chunking.py  test_clusterer.py  test_clusterer_performance.py  test_config.py  test_dedup.py  test_e2e_validation.py  test_edge_cases.py  test_enrich_local.py  test_enrichers.py  test_eval_schema.py  test_export.py  test_filtering.py  test_formatter.py  test_injection_detector.py  test_injection_eval.py  test_injection_prompt_logging.py  test_injection_scan_runs_on_provider_path.py  test_injection_shared_source.py  test_ioc_corpus.py  test_ioc_eval.py  test_ioc_extractor.py  test_ioc_type_eval.py  test_json_contract.py  test_llm_failure_posture.py  test_llm_provider_requests.py  test_main_ticket_integration.py  test_metrics.py  test_mock_summarizer.py  test_models.py  test_normalizers.py  test_output_html_md.py  test_output_render_safety.py  test_p0_severity_hint_plumbing.py  test_p1_all.py  test_pipeline.py  (+20 more)
tests/fixtures/: brute_force_scenario.json  fp_cluster.json  generate_brute_force.py  lateral_movement.json  mixed.json  phishing_campaign.json
tests/fixtures/ioc_corpus/: 01_ps_eclipse_sysmon.txt  02_defanged_threat_report.txt  03_anyrun_report.txt  04_otx_pulse.txt  05_ransomware_ransomnote.txt
tests/generators/: __init__.py  alert_generator.py
tooling/: ruff-base.toml
