[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sift-triage"
version = "1.3.2"
description = "AI-powered alert triage summarizer for SOC teams"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Christian Huhn" }]
keywords = ["siem", "alert-triage", "soc", "dfir", "mitre-attack", "ai", "cli"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "Topic :: Security",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "typer>=0.12.0",
    "rich>=13.7.0",
    "pydantic>=2.7.0",
    "pyyaml>=6.0.1",
    "python-dotenv>=1.0.0",
    "shipwright-kit>=0.10.1,<0.11.0", # runtime: sift.summarizers.{anthropic,openai,ollama} need the client-injection llm API (0.10.1+); + injection_detector + config

]

[project.optional-dependencies]
llm = ["anthropic>=0.30.0", "openai>=1.30.0"]
enrich = ["barb-phish>=1.0.0"]
all = ["anthropic>=0.30.0", "openai>=1.30.0", "barb-phish>=1.0.0", "httpx>=0.27.0"]
ticket = ["httpx>=0.27.0"]

[project.scripts]
sift = "sift.main:main"

[project.urls]
Homepage = "https://github.com/duathron/sift"
Repository = "https://github.com/duathron/sift"
"Bug Tracker" = "https://github.com/duathron/sift/issues"
LinkedIn = "https://www.linkedin.com/in/christian-huhn-76a407114"

[tool.setuptools.packages.find]
include = ["sift*"]

[tool.setuptools.data-files]
"share/man/man1" = ["man/sift.1"]

[tool.ruff]
extend = "tooling/ruff-base.toml"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[dependency-groups]
dev = [
    "ruff>=0.15.15,<0.16",
    "mypy>=1.10.0",
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-httpx>=0.36.2",
    "hypothesis>=6.0",
]
